feat: implement authentication link schema, JWT setup, and routes for authentication flow
- Add schema for authentication links
- Create route for sending authentication link
- Setup JWT-based authentication
- Implement route for authentication via link
- Add route for logout and session termination

--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "build": "bun build src/http/server.ts",
     "start": "NODE_ENV=production bun src/http/server.ts",
     "test": "bun test",
-    "generate": "drizzle-kit generate:pg",
+    "generate": "drizzle-kit generate",
     "studio": "drizzle-kit studio",
     "migrate": "bun src/db/migrate.ts",
     "seed": "bun src/db/seed.ts",
     "lint": "eslint --fix src/**/*.ts"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/jwt": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.13.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.2",
     "elysia": "^1.1.22",
