--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pizzashop-api",
+  "name": "lapizzeria-api",
   "module": "index.ts",
   "type": "module",
   "scripts": {
@@ -11,7 +11,7 @@
     "studio": "drizzle-kit studio",
     "migrate": "bun src/db/migrate.ts",
     "seed": "bun src/db/seed.ts",
-    "lint": "eslint --fix src/**/*.ts"
+    "lint": "eslint --fix src --ext ts"
   },
   "dependencies": {
     "@elysiajs/cookie": "^0.8.0",
@@ -31,9 +31,11 @@
     "@faker-js/faker": "^9.0.3",
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/bun": "latest",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "chalk": "^5.3.0",
     "drizzle-kit": "^0.26.2",
-    "eslint": "^9.13.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "pg": "^8.13.0",
     "typescript": "^5.6.3"
