--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.2",
     "elysia": "^1.1.22",
+    "nodemailer": "^6.9.16",
     "postgres": "^3.4.4",
     "prettier": "^3.3.3",
     "zod": "^3.23.8"
@@ -31,6 +32,7 @@
     "@faker-js/faker": "^9.0.3",
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/bun": "latest",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "chalk": "^5.3.0",
