--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.2",
+    "drizzle-typebox": "^0.1.1",
     "elysia": "^1.1.22",
     "nodemailer": "^6.9.16",
     "postgres": "^3.4.4",
