feat: cors on authentication and auth error, authentication via magic link

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,6 @@
     "plugin:drizzle/all"
   ],
   "plugins": [
-    "drizzle",
-    "@typescript-eslint"
-  ],
-  "parser": "@typescript-eslint/parser"
+    "drizzle"
+  ]
 }
