--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
+version: '3.7'
+
 services:
   postgres:
     image: bitnami/postgresql:latest
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=lapizzeria
     volumes:
-      - lapizzeria_pg_data:/bitnami/postgresql
+      - postgres_data:/bitnami/postgresql
 
 volumes:
-  lapizzeria_pg_data:
+  postgres_data:
