--- a/package.json
+++ b/package.json
@@ -1,46 +1,42 @@
 {
-  "name": "lapizzeria-api",
-  "module": "index.ts",
+  "name": "lapizzeria",
   "type": "module",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
+    "generate": "drizzle-kit generate:pg",
     "dev": "bun --watch src/http/server.ts",
-    "build": "bun build src/http/server.ts",
-    "start": "NODE_ENV=production bun src/http/server.ts",
-    "test": "bun test",
-    "generate": "drizzle-kit generate",
-    "studio": "drizzle-kit studio",
     "migrate": "bun src/db/migrate.ts",
     "seed": "bun src/db/seed.ts",
-    "lint": "eslint --fix src --ext ts"
+    "deploy": "bun migrate && bun seed && bun dev"
   },
   "dependencies": {
-    "@elysiajs/cookie": "^0.8.0",
-    "@elysiajs/jwt": "^1.1.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.13.0",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "dayjs": "^1.11.13",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.35.2",
+    "@elysiajs/cookie": "^0.7.0",
+    "@elysiajs/cors": "^0.7.2",
+    "@elysiajs/jwt": "^0.7.0",
+    "@paralleldrive/cuid2": "2.2.2",
+    "@react-email/components": "^0.0.11",
+    "dayjs": "^1.11.10",
+    "drizzle-orm": "^0.29.1",
     "drizzle-typebox": "^0.1.1",
-    "elysia": "^1.1.22",
-    "nodemailer": "^6.9.16",
-    "postgres": "^3.4.4",
-    "prettier": "^3.3.3",
-    "zod": "^3.23.8"
+    "elysia": "0.7.29",
+    "postgres": "3.4.3",
+    "react": "^18.2.0",
+    "resend": "^2.0.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.0.3",
-    "@rocketseat/eslint-config": "^2.1.0",
-    "@types/bun": "latest",
-    "@types/nodemailer": "^6.4.17",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "chalk": "^5.3.0",
-    "drizzle-kit": "^0.26.2",
-    "eslint": "^8.56.0",
-    "eslint-plugin-drizzle": "^0.2.3",
-    "pg": "^8.13.0",
-    "typescript": "^5.6.3"
+    "@faker-js/faker": "8.3.1",
+    "@rocketseat/eslint-config": "2.1.0",
+    "@types/pg": "8.10.9",
+    "@types/react": "^18.2.39",
+    "bun-types": "^1.0.14",
+    "chalk": "5.3.0",
+    "drizzle-kit": "0.20.6",
+    "eslint": "8.54.0",
+    "eslint-plugin-drizzle": "^0.2.1",
+    "eslint_d": "13.1.1",
+    "pg": "^8.11.3",
+    "typescript": "5.3.2"
   }
 }
